syntax = "proto3";

package rivet.backend.pkg.team.member_list;

import "resources/legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid team_ids = 1;
	optional uint32 limit = 2;
	optional int64 anchor = 3;
}

message Response {
	message Team {
		rivet.common.Uuid team_id = 1;
		repeated TeamMember members = 2;
		optional int64 anchor = 3;
	}

	message TeamMember {
		rivet.common.Uuid user_id = 1;
		int64 join_ts = 2;
	}

	repeated Team teams = 1;
}
